Bug 352743 - Dolphin says that home directory doesn't exist
Summary: Dolphin says that home directory doesn't exist
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: location (other bugs)
Version First Reported In: 16.12.2
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-15 13:46 UTC by Michał
Modified: 2015-12-21 20:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.3
Sentry Crash Report:


Attachments
Screenshot showing the problem (198.95 KB, image/png)
2015-09-15 13:47 UTC, Michał
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michał 2015-09-15 13:46:19 UTC
Version is 15.08.0

Run dolphin from terminal
$ dolphin
Dolphin window shows empty folder and there's error shown on top saying that my home directory doesn't exist.

Reproducible: Always

Steps to Reproduce:
1. Run dolphin from terminal

Actual Results:  
Wrong message about non-existing folder appears

Expected Results:  
Home directory shown
Comment 1 Michał 2015-09-15 13:47:00 UTC
Created attachment 94576 [details]
Screenshot showing the problem
Comment 2 Michał 2015-09-15 13:47:27 UTC
When I click on the location bar and press enter without changing anything, warning disappears and home folder is shown correctly.
Comment 3 Nikola Kovacs 2015-10-16 10:15:03 UTC
Yeah, the problem is that it's trying to open file:/home/username. It should be opening file:///home/username.
Comment 4 Emmanuel Pescosta 2015-10-16 10:19:20 UTC
Review-Request: https://git.reviewboard.kde.org/r/125586/
Comment 5 Nikola Kovacs 2015-10-16 10:21:41 UTC
If you go into Settings->Configure Dolphin... and then in Startup click "Use Default Location" it will reset to your home folder and it will work from then on.

It looks like this is just a setting that's migrated incorrectly from the kde 4 version of dolphin.
Comment 6 Michał 2015-10-19 12:40:05 UTC
Yup, that fixed it. Thank you.
Comment 7 Emmanuel Pescosta 2015-10-21 11:46:26 UTC
Git commit 5dd5eaf08da4b7d11e53c90096c2ea0e6a19e840 by Emmanuel Pescosta.
Committed on 21/10/2015 at 11:45.
Pushed by emmanuelp into branch 'Applications/15.08'.

Allow home directories with non-local file paths.

Paths like file:/home/me work now instead of showing
an error message.
Related: bug 353550
FIXED-IN: 15.08.3
REVIEW: 125586

M  +2    -1    src/dolphinmainwindow.cpp
M  +4    -3    src/dolphinviewcontainer.cpp
M  +7    -0    src/global.cpp
M  +5    -0    src/global.h
M  +1    -2    src/main.cpp
M  +5    -4    src/settings/startup/startupsettingspage.cpp

http://commits.kde.org/dolphin/5dd5eaf08da4b7d11e53c90096c2ea0e6a19e840
Comment 8 Holger 2015-12-21 20:55:48 UTC
This bug has an ugly side-effect: You cannot copy a folder. It will complain about something like: "found a file, where a folder was expected". But it's also fixed by resetting the home folder