Allow home directories with non-local file paths.

Paths like file:/home/me work now instead of showing
an error message.

BUG: 352743
BUG: 353550
FIXED-IN: 15.08.3
REVIEW: 125586